<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/lock" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/forgot_password_page_txt"
            android:fontFamily="@font/lexend"
            android:gravity="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:padding="15dp"
            android:hint="@string/email_hint"
            android:fontFamily="@font/lexend"
            android:background="@drawable/rounded_button"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/EditNewPassword"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:hint="@string/new_password_hint"
            android:fontFamily="@font/lexend"
            android:background="@drawable/rounded_button"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/EditConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:hint="@string/confirm_new_password_hint"
            android:fontFamily="@font/lexend"
            android:background="@drawable/rounded_button"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:backgroundTint="@color/neon_green"
            android:text="@string/change_password_txt_btn"
            android:fontFamily="@font/lexend"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/back_to_login_txt_btn"
            android:fontFamily="@font/lexend"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</ScrollView>