<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="222dp">

        <View
            android:id="@+id/rectangle_6"
            android:layout_width="436dp"
            android:layout_height="304dp"
            android:layout_marginStart="-12dp"
            android:layout_marginTop="-17dp"
            android:background="@drawable/rectangle_6"
            />

        <TextView
            android:id="@+id/farm_manage"
            android:layout_width="match_parent"
            android:layout_marginTop="90dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:fontFamily="@font/lexend"
            android:textAppearance="@style/farm_manage" />
    </FrameLayout>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/background_image"
        android:layout_marginTop="60dp"
        android:text="@string/login_here_txt"
        android:fontFamily="@font/lexend"
        android:textColor="#8B4513"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/Login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_text"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="15dp"
            android:hint="@string/email_hint"
            android:fontFamily="@font/lexend"
            android:background="@drawable/rounded_button"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/EditPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="15dp"
            android:hint="@string/password_hint"
            android:fontFamily="@font/lexend"
            android:background="@drawable/rounded_button"
            android:inputType="textPassword"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sing_in_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_input"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:text="@string/forgot_password"
            android:fontFamily="@font/lexend"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            android:backgroundTint="@color/neon_green"
            android:text="@string/sign_in_btn"
            android:fontFamily="@font/lexend"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signing_up_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sing_in_directory"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_txt"
            android:fontFamily="@font/lexend"
            android:textColor="#808080"
            android:textSize="16sp" />

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/teal_ish"
            android:text="@string/register_here_btn_txt"
            android:fontFamily="@font/lexend"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>